--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,8 @@
  @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #000000;
+  --background: #000000;
+  --foreground: #ffffff;
 }
 
 @theme inline {
@@ -27,4 +27,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+.text-primary {
+     color: hsl(0, 0%, 100%); 
+}
+
+.text-primary-600 {
+     color: hsl(0, 0%, 0%); 
+     background-color: #fe9a00;
 }
